--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/justcho/tutu-demo/issues"
   },
-  "homepage": "https://github.com/justcho/tutu-demo#readme"
+  "homepage": "https://github.com/justcho/tutu-demo#readme",
+  "dependencies": {
+    "vue": "^2.6.11"
+  }
 }
