--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ addons:
   chrome: stable
 sudo: required
 before_script:
-  - "sudo down root /opt/google/chrome/chrome-sandbox"
+  - "sudo chown root /opt/google/chrome/chrome-sandbox"
   - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
