--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache & karma start",
-    "test": "parcel build test/* --no-minify && karma start --single-run"
+    "test": "parcel build test/* --no-minify && karma start --single-run",
+    "build": "parcel build index.js --no-cache --no-minify",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "repository": {
     "type": "git",
@@ -23,25 +26,29 @@
   },
   "homepage": "https://github.com/justcho/tutu-demo#readme",
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue": "^2.5.16",
+    "vue-hot-reload-api": "^2.3.0",
+    "vue2": "^1.0.0"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^3.2.0",
-    "chai": "^4.2.0",
+    "@vue/component-compiler-utils": "^2.0.0",
+    "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
-    "karma": "^5.1.1",
+    "karma": "^2.0.4",
     "karma-chai": "^0.1.0",
     "karma-chai-spies": "^0.1.4",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^2.0.1",
-    "karma-sinon-chai": "^2.0.2",
-    "mocha": "^8.1.1",
-    "node-sass": "^4.9.0",
-    "parcel-bundler": "^1.12.4",
-    "sinon": "^9.0.3",
-    "sinon-chai": "^3.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^1.3.4",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.9.2",
+    "parcel-bundler": "^1.9.3",
+    "sass": "^1.26.10",
+    "sass-loader": "^7.3.1",
+    "sinon": "^6.0.1",
+    "sinon-chai": "^3.2.0",
+    "vue-template-compiler": "^2.5.16",
+    "vuepress": "^0.13.1"
   },
   "alias": {
     "vue": "./node_modules/vue/dist/vue.common.js"
